<?xml version="1.0"?>
<package format="2">
  <name>bence_val_sandbox</name>
  <version>0.0.0</version>
  <description>The bence_val_sandbox package</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>urdf</depend>
  <depend>realtime_tools</depend>


  <export>
    <controller_interface plugin="${prefix}/bence_plugins.xml"/>
  </export>
</package>
